kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subjects-app-ingress
  namespace: subjects-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: subjectsapp.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 9090

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4202
